<resources>
    <string name="app_name">电网巡检</string>
    <string name="cancel">取消</string>
    <string name="sure">确定</string>
    <string name="tip">提示</string>
    <string name="progress">进度查看</string>
    <string name="user_password">密码</string>
    <string name="user_name">用户名</string>
    <string name="btn_login">登陆</string>
    <string name="task_list">任务列表</string>
    <string name="task_upload">任务上传</string>
    <string name="task_download">同步任务</string>
    <string name="task_power_off">退出登录</string>
    <string name="task_list_xunjian">巡检任务</string>
    <string name="task_ansy">同步任务</string>
    <string name="about">关于我们</string>
    <string name="title_about_us">关于我们</string>
    <string name="clear_cache">清除缓存</string>
    <string name="task_list_xiaoque">消缺任务</string>
    <string name="success">保存成功!</string>

</resources>
