<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/launcher_bg"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:src="@mipmap/logo" />

    <EditText
        android:id="@+id/user_edit"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="80dp"
        android:background="@drawable/shape_oval_edit"
        android:gravity="center"
        android:hint="@string/user_name"
        android:textColorHint="@color/gray"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/password_edit"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:background="@drawable/shape_oval_edit"
        android:gravity="center"
        android:hint="@string/user_password"
        android:inputType="textPassword"
        android:textColorHint="@color/gray"
        android:textSize="15sp" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="250dp"
        android:layout_height="@dimen/btn_w"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:background="@drawable/shape_oval_button"
        android:text="@string/btn_login"
        android:textColor="@color/colorWhite"
        android:textSize="15sp" />


</LinearLayout>