<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/user_image"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:src="@mipmap/user_img" />

    <TextView
        android:id="@+id/name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:maxLines="2"/>

    <TextView
        android:id="@+id/class_text"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:singleLine="false"
        android:maxEms="10"/>

    <View
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:background="@color/view" />

    <TextView
        android:paddingStart="3dp"
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_margin="10dp"
        android:drawablePadding="30dp"
        android:drawableStart="@mipmap/list"
        android:gravity="center_vertical"
        android:text="@string/task_list" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:background="@color/view" />

    <TextView
        android:id="@+id/download"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_margin="10dp"
        android:drawablePadding="30dp"
        android:drawableStart="@mipmap/download"
        android:gravity="center_vertical"
        android:text="@string/task_download" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:background="@color/view" />

    <TextView
        android:id="@+id/upload"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_margin="10dp"
        android:drawablePadding="30dp"
        android:drawableStart="@mipmap/upload"
        android:gravity="center_vertical"
        android:text="@string/task_upload" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:background="@color/view" />

    <TextView
        android:paddingStart="5dp"
        android:id="@+id/power_off_login"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_margin="10dp"
        android:drawablePadding="33dp"
        android:drawableStart="@mipmap/power_off_28"
        android:gravity="center_vertical"
        android:text="@string/task_power_off" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:background="@color/view" />


</LinearLayout>